[gd_scene load_steps=18 format=2]

[ext_resource path="res://addons/inventory_example/textures/Background.png" type="Texture" id=1]
[ext_resource path="res://addons/inventory_example/2d/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/inventory_example/2d/Level1.gd" type="Script" id=3]
[ext_resource path="res://addons/inventory_example/textures/BackgroundSide.png" type="Texture" id=4]
[ext_resource path="res://addons/inventory_editor/InventoryItem2D.gd" type="Script" id=5]
[ext_resource path="res://addons/inventory_editor/default/fonts/Pangolin-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://addons/inventory_example/2d/items/HealthNormal.tscn" type="PackedScene" id=7]
[ext_resource path="res://addons/inventory_example/2d/items/HealthBig.tscn" type="PackedScene" id=8]
[ext_resource path="res://addons/inventory_example/2d/items/ManaNormal.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/inventory_example/2d/items/ManaBig.tscn" type="PackedScene" id=10]
[ext_resource path="res://addons/inventory_example/2d/items/SwordDestroyer.tscn" type="PackedScene" id=11]
[ext_resource path="res://addons/inventory_example/2d/items/SwordDragonhunter.tscn" type="PackedScene" id=12]
[ext_resource path="res://addons/inventory_example/inventories/simple/InventoryUI.tscn" type="PackedScene" id=13]
[ext_resource path="res://addons/inventory_example/textures/inventories/Chest.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 958.173, 30.1941 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 341.202 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Background" type="Sprite" parent="."]
position = Vector2( 920, 235 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Floor" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Floor"]
position = Vector2( 0, 350 )
shape = SubResource( 1 )

[node name="Left" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Left"]
position = Vector2( -870, 0 )
shape = SubResource( 2 )

[node name="Right" type="StaticBody2D" parent="Background"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/Right"]
position = Vector2( 870, 0 )
shape = SubResource( 2 )

[node name="BackgroundSideRight" type="Sprite" parent="Background"]
position = Vector2( 1920, 0 )
texture = ExtResource( 4 )
flip_h = true

[node name="BackgroundSideLeft" type="Sprite" parent="Background"]
position = Vector2( -1920, 0 )
texture = ExtResource( 4 )
flip_h = true

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 220, 540 )
scale = Vector2( 0.2, 0.2 )

[node name="CanvasError" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasError"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5874
margin_right = 1.5874
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.823529, 0.533333, 0.121569, 1 )
text = "To support dialogues you have to autoload res://addons/dialogue_editor/DialogueManager.gd"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Node2D" parent="."]

[node name="Item2D" type="Node2D" parent="Items"]
position = Vector2( 500, 500 )
script = ExtResource( 5 )
item_put = "f4352b3f-8500-419f-9617-9da134d822f5"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_f4352b3f-8500-419f-9617-9da134d822f5" parent="Items/Item2D" instance=ExtResource( 7 )]

[node name="Item2D2" type="Node2D" parent="Items"]
position = Vector2( 600, 400 )
script = ExtResource( 5 )
item_put = "f4352b3f-8500-419f-9617-9da134d822f5"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_f4352b3f-8500-419f-9617-9da134d822f5" parent="Items/Item2D2" instance=ExtResource( 7 )]

[node name="Item2D3" type="Node2D" parent="Items"]
position = Vector2( 800, 500 )
script = ExtResource( 5 )
item_put = "63015407-55c9-4729-887f-493fe2a624b7"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_63015407-55c9-4729-887f-493fe2a624b7" parent="Items/Item2D3" instance=ExtResource( 8 )]

[node name="Item2D4" type="Node2D" parent="Items"]
position = Vector2( 900, 400 )
script = ExtResource( 5 )
item_put = "f4352b3f-8500-419f-9617-9da134d822f5"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_f4352b3f-8500-419f-9617-9da134d822f5" parent="Items/Item2D4" instance=ExtResource( 7 )]

[node name="Item2D5" type="Node2D" parent="Items"]
position = Vector2( 1200, 400 )
script = ExtResource( 5 )
item_put = "af0ab25b-4add-4834-ad96-555efd2e629d"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_af0ab25b-4add-4834-ad96-555efd2e629d" parent="Items/Item2D5" instance=ExtResource( 9 )]

[node name="Item2D6" type="Node2D" parent="Items"]
position = Vector2( 1250, 500 )
script = ExtResource( 5 )
item_put = "a9f24ca6-b213-4f07-a690-2185ffd6ec1d"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_a9f24ca6-b213-4f07-a690-2185ffd6ec1d" parent="Items/Item2D6" instance=ExtResource( 10 )]

[node name="Item2D7" type="Node2D" parent="Items"]
position = Vector2( 1500, 500 )
script = ExtResource( 5 )
item_put = "cf240703-26ac-4a2a-88a7-1441ff6c6a0c"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_cf240703-26ac-4a2a-88a7-1441ff6c6a0c" parent="Items/Item2D7" instance=ExtResource( 11 )]

[node name="Item2D8" type="Node2D" parent="Items"]
position = Vector2( 1650, 400 )
script = ExtResource( 5 )
item_put = "5fa70d8d-c0d0-43d9-8260-6efa4fde008b"
to_inventory = "e4530fc7-c5d6-41af-9b6e-35249272186a"

[node name="InventoryItem_5fa70d8d-c0d0-43d9-8260-6efa4fde008b" parent="Items/Item2D8" instance=ExtResource( 12 )]

[node name="CanvasInventory" type="CanvasLayer" parent="."]

[node name="InventoryAny" parent="CanvasInventory" instance=ExtResource( 13 )]
margin_left = 720.0
margin_top = 110.0
margin_right = 1020.0
margin_bottom = 410.0

[node name="CanvasButton" type="CanvasLayer" parent="."]

[node name="TextureButton" type="TextureButton" parent="CanvasButton"]
margin_left = 920.0
margin_top = 5.0
margin_right = 1020.0
margin_bottom = 105.0
texture_normal = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}
